--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         run: echo "::set-env name=VERSION::$(cat ${GITHUB_EVENT_PATH} | jq -r '.release.tag_name')"
 
       - name: Override NAME for flanksource publication
-        run: echo "::set-env name=NAME::flanksource/actions-runner-controller"
+        run: echo "NAME=flanksource/actions-runner-controller" >> $GITHUB_ENV
 
       - name: Upload artifacts
         env:
